van-4547 camera blur radio btn alignment fix

--- a/vtr-ui/src/app/components/ui/ui-rounded-rectangle-radio/ui-rounded-rectangle-radio.component.scss
+++ b/vtr-ui/src/app/components/ui/ui-rounded-rectangle-radio/ui-rounded-rectangle-radio.component.scss
@@ -53,10 +53,7 @@
 			font-size: 3rem;
 			color: $main;
 			top: 1.5rem;
-			left: 1.5rem;
-			@media #{$mediaquery_19} {
-				left: -8.5rem;
-			}
+			left: -8.5rem;
 		}
 
 		fa-icon.icon {
